--- a/_drafts/2015-12-12-Test Item.md
+++ b/_drafts/2015-12-12-Test Item.md
@@ -3,7 +3,7 @@ comments: true
 date: 2015-12-12 01:09:49
 layout: post
 title: Test Item for Blog!
-summary: This is a test item ignore it!
+description: This is a test item ignore it!
 image: placeholder.png
 tags:
 - vegan
@@ -18,10 +18,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sem quam, elementum 
         <th scope="row" valign="top">
             <?php _e("awe.sm:", "sociable"); ?>
         </th>
-        
+
         <td>
             <?php _e("You can choose to automatically have the links posted to certain sites shortened via awe.sm and encoded with the channel info and your API Key.", 'sociable'); ?><br/>
             <input type="checkbox" name="awesmenable" <?php checked( get_option('sociable_awesmenable'), true ); ?> /> <?php _e("Enable awe.sm URLs?", "sociable"); ?><br/>
             <?php _e("awe.sm API Key:", 'sociable'); ?> <input size="65" type="text" name="awesmapikey" value="<?php echo get_option('sociable_awesmapikey'); ?>" />
         </td>
-
